tests/paczka1/fuzzy1/73545319.err
Error in line 4: UtMZl S576 31,8
Error in line 19: UtMZl A194 21,5
Error in line 21: UtMZl A994 69,2
Error in line 26: A999 A194 62,6
Error in line 36: A999 S576 10,9
